41-docker - Allow us to obtain java heap-dumps in case of an OutOfMemoryError
* add dedicated volumes for app and webapi
* bonus: derive memory settings from docker instead of setting them statically

https://github.com/metasfresh/metasfresh-docker/issues/41