@@ -6,6 +6,7 @@ set -u
 DB_HOST=db
 APP_HOST=app
 
+
 set_properties()
 {
  local prop_file="$1"
@@ -55,7 +56,8 @@ run_metasfresh()
 
  cd /opt/metasfresh/ && java \
  -Dsun.misc.URLClassPath.disableJarChecking=true \
- -Xmx1024M -XX:MaxPermSize=512M -XX:+HeapDumpOnOutOfMemoryError \
+ -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap \
+ -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt/metasfresh/heapdump \
  -DPropertyFile=/opt/metasfresh/metasfresh.properties \
  -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8788 \
  -Dcom.sun.net.ssl.enableECC=false \
